language/move-lang/tests/move_check/naming/duplicate_type_parameter_struct.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/duplicate_type_parameter_struct.move:2:17
  │
2 │     struct S<T, T> {}
  │              -  ^ Duplicate type parameter declared with name 'T'
  │              │   
  │              Type parameter previously defined here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/duplicate_type_parameter_struct.move:3:24
  │
3 │     struct S2<T: drop, T: key, T> {}
  │               -        ^ Duplicate type parameter declared with name 'T'
  │               │         
  │               Type parameter previously defined here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/duplicate_type_parameter_struct.move:3:32
  │
3 │     struct S2<T: drop, T: key, T> {}
  │               -                ^ Duplicate type parameter declared with name 'T'
  │               │                 
  │               Type parameter previously defined here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/duplicate_type_parameter_struct.move:4:17
  │
4 │     struct R<T, T> {}
  │              -  ^ Duplicate type parameter declared with name 'T'
  │              │   
  │              Type parameter previously defined here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/duplicate_type_parameter_struct.move:5:24
  │
5 │     struct R2<T: drop, T: key, T> {}
  │               -        ^ Duplicate type parameter declared with name 'T'
  │               │         
  │               Type parameter previously defined here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/duplicate_type_parameter_struct.move:5:32
  │
5 │     struct R2<T: drop, T: key, T> {}
  │               -                ^ Duplicate type parameter declared with name 'T'
  │               │                 
  │               Type parameter previously defined here

